[gd_scene load_steps=7 format=3 uid="uid://cr4iufdbhtv04"]

[ext_resource type="Script" path="res://scripts/spaceship.gd" id="1_hhg0k"]
[ext_resource type="Texture2D" uid="uid://wlxlfo6jvnxi" path="res://assets/spaceship.png" id="1_pu5gl"]
[ext_resource type="PackedScene" uid="uid://cceewqt6r758v" path="res://scenes/death_sfx.tscn" id="2_8pwvd"]
[ext_resource type="FontFile" uid="uid://ct7nicg7asvhg" path="res://assets/MaldiniBold.ttf" id="3_hidbr"]
[ext_resource type="AudioStream" uid="uid://kkfacv0mg85l" path="res://SFX/Hit.wav" id="4_w8eac"]
[ext_resource type="AudioStream" uid="uid://bjhklljqqeal8" path="res://SFX/Laser_Shoot.wav" id="5_n7fne"]

[node name="Spaceship" type="Area2D"]
z_index = 2
script = ExtResource("1_hhg0k")
death_sfx = ExtResource("2_8pwvd")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(-35, 2.71051e-20)
scale = Vector2(0.4, 0.399)
polygon = PackedVector2Array(40, 57, 75, 4, 98, 4, 131, 58, 149, 185, 171, 185, 171, 263, 100, 295, 61, 295, -1, 265, 0, 186, 21, 185)

[node name="spaceship" type="Sprite2D" parent="."]
position = Vector2(3.8147e-06, 58)
scale = Vector2(0.4, 0.4)
texture = ExtResource("1_pu5gl")

[node name="HpDisplay" type="Label" parent="."]
z_index = 3
offset_left = -22.0
offset_top = -40.0
offset_right = 23.0
offset_bottom = -9.0
theme_override_fonts/font = ExtResource("3_hidbr")
theme_override_font_sizes/font_size = 24

[node name="InvincibilityTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Shield" type="Polygon2D" parent="."]
visible = false
position = Vector2(6, 5)
color = Color(0.390713, 0.00159255, 0.640173, 1)
polygon = PackedVector2Array(-37, -11, -45, -5, -51, 3, -55, 14, -59, 28, -62, 44, -65, 66, -65, 83, -62, 104, -53, 118, -36, 126, -22, 129, -4, 129, 18, 130, 33, 124, 48, 110, 50, 93, 48, 75, 46, 59, 43, 42, 42, 26, 38, 12, 33, 0, 27, -9, 15, -15, -2, -17, -16, -17)

[node name="HitSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_w8eac")
volume_db = -5.0

[node name="LaserShootSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_n7fne")
volume_db = -23.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_invincibility_timer_timeout"]
